seperated head and added use of vue to index

--- a/public/contact.html
+++ b/public/contact.html
@@ -5,45 +5,10 @@
     <meta name="description"
           content="Contact details and links related to me. Software Engineering portfolio website. Alexander Toop, previously employed by BT and studied at Aberystwyth
           University. Projects include Java, JavaScript, PHP, Angular and Node development."/>
-    <link rel="icon" href="../images/favicon.ico"/>
-    <link rel="stylesheet" href="../stylesheets/style.css">
-    <!-- 'Simple line icons': lisenced under MIT lisence -->
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
-    <!-- Gets fonts for titles and text -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Website icon support, absolute urls used for device compatibility -->
-    <!-- To support old sizes -->
-    <link rel="apple-touch-icon" sizes="57x57" href="https://www.alextoop.com/images/device-icon-57.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="https://www.alextoop.com/images/device-icon-72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="https://www.alextoop.com/images/device-icon-114.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="https://www.alextoop.com/images/device-icon-144.png">
-
-    <!--To support new sizes-->
-    <link rel=”apple-touch-icon” sizes=”60×60″ href=”https://www.alextoop.com/images/device-icon-60.png”>
-    <link rel=”apple-touch-icon” sizes=”76×76″ href=”https://www.alextoop.com/images/device-icon-76.png”>
-    <link rel=”apple-touch-icon” sizes=”120×120″ href=”https://www.alextoop.com/images/device-icon-120.png”>
-    <link rel=”apple-touch-icon” sizes=”152×152″ href=”https://www.alextoop.com/images/device-icon-152.png”>
-    <link rel=”apple-touch-icon” sizes=”180×180″ href=”https://www.alextoop.com/images/device-icon-180.png”>
-
-    <!--To support Android-->
-    <link rel=”icon” sizes=”192×192″ href=”https://www.alextoop.com/images/device-icon-192.png”>
-    <link rel=”icon” sizes=”128×128″ href=”https://www.alextoop.com/images/device-icon-128.png”>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73302818-2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script> $(function(){ $("head").load("./jquery_includes/head.html") }); </script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
