--- a/public/index.html
+++ b/public/index.html
@@ -5,153 +5,108 @@
     <meta name="description"
           content="Software Engineering portfolio website. Alexander Toop, previously employed by BT and studied at Aberystwyth
           University. Projects include Java, JavaScript, PHP, Angular and Node development."/>
-    <link rel="icon" href="../images/favicon.ico"/>
-    <link rel="stylesheet" href="../stylesheets/style.css">
-    <!-- 'Simple line icons': lisenced under MIT lisence -->
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
-    <!-- Gets fonts for titles and text -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Website icon support, absolute urls used for device compatibility -->
-    <!-- To support old sizes -->
-    <link rel="apple-touch-icon" sizes="57x57" href="https://www.alextoop.com/images/device-icon-57.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="https://www.alextoop.com/images/device-icon-72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="https://www.alextoop.com/images/device-icon-114.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="https://www.alextoop.com/images/device-icon-144.png">
-
-    <!--To support new sizes-->
-    <link rel=”apple-touch-icon” sizes=”60×60″ href=”https://www.alextoop.com/images/device-icon-60.png”>
-    <link rel=”apple-touch-icon” sizes=”76×76″ href=”https://www.alextoop.com/images/device-icon-76.png”>
-    <link rel=”apple-touch-icon” sizes=”120×120″ href=”https://www.alextoop.com/images/device-icon-120.png”>
-    <link rel=”apple-touch-icon” sizes=”152×152″ href=”https://www.alextoop.com/images/device-icon-152.png”>
-    <link rel=”apple-touch-icon” sizes=”180×180″ href=”https://www.alextoop.com/images/device-icon-180.png”>
-
-    <!--To support Android-->
-    <link rel=”icon” sizes=”192×192″ href=”https://www.alextoop.com/images/device-icon-192.png”>
-    <link rel=”icon” sizes=”128×128″ href=”https://www.alextoop.com/images/device-icon-128.png”>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73302818-2"></script>
-    <script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" 
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script> $(function(){ $("head").load("./jquery_includes/head.html") }); </script>
+    <script>    
         window.dataLayer = window.dataLayer || [];
 
         function gtag() {
             dataLayer.push(arguments);
         }
-
+    
         gtag('js', new Date());
-
+    
         gtag('config', 'UA-73302818-2');
     </script>
-
 </head>
 
 <body>
 
-
 <div id="nav-bar-content"></div>
-
 
 <div id="wrapper">
 
     <div id="header">
-        <h1>Alex Toop Software Engineering</h1>
+        <h1> {{title}} </h1>
     </div>
 
     <div class="row">
         <div class="col-md-6">
-
-
-            <h2>Me.</h2>
-            <p>
-                Studied at Aberystwyth University Software Engineering BEng. First Class Honours.
-            </p>
-            <p>
-                Developed Java server back-ends and Angular front-ends for intelligent
-                pre-sales systems in prior BT employment.
-            </p>
-
-            <h2>GitHub.</h2>
-            <div class="github-widget" data-username="alextoop"></div>
-            <script src="https://npmcdn.com/github-card@1.2.0/dist/widget.js"></script>
-
+            <div id="section1">
+                <h2>{{ section1title }}</h2>
+                <p>{{ section1part1 }}</p>
+                <p>{{ section1part2 }}</p>
+            </div>
+            <div id="section2">
+                <h2>{{ section2title }}</h2>
+                <div class="github-widget" data-username="alextoop"></div>
+                <script src="https://npmcdn.com/github-card@1.2.0/dist/widget.js"></script>
+            </div>
         </div>
 
         <div class="col-md-6">
+            <div id="section3">
+                <h2>{{ section3title }}</h2>
+                <ul>
+                    <li>{{ section3part1 }}</li>
+                    <li>{{ section3part2 }}</li>
+                    <li>{{ section3part3 }}</li>
+                </ul>
+             </div>
 
+            <div id="section4">
+                <h2>{{ section4title }}</h2>
+                <ul>
+                    <li>{{ section4part1 }}</li>
+                    <li>{{ section4part2 }}</li>
+                    <li>{{ section4part3 }}</li>
+                </ul>
+            </div>
 
-            <h2>Development.</h2>
-            <ul>
-                <li>Commercial, Java and JavaScript development and deployment.</li>
-                <li>Commercial, JUnit, Jasmine and Angular framework use.</li>
-                <li>Personal, Fitbit JavaScript and node.js development.</li>
-            </ul>
-
-            <h2>History.</h2>
-            <ul>
-                <li>Achieved grades BBBD in Computing, Mathematics, General Studies and Physics at A-Level.</li>
-                <li>Software Engineering Bachelors Degree, Aberystwyth University. [Pending]</li>
-                <li>BT TSO Software Development involving Java and Angular.</li>
-            </ul>
-
-            <h2>Hobbies.</h2>
-            <p>
-                I enjoy developing in my spare time and currently doing Fitbit JavaScript
-                development alongside node.js projects. See '<a href="projects.html">Projects</a>'.
-            </p>
-            <p>
-                I regularly swim with friends and enjoy long-distance running on occasion. Competitive esports gaming is
-                one of my passions and I have attended and won events at LANs as a part of a team.
-            </p>
-
+            <div id="section5">
+                <h2>{{ section5title }}</h2>
+                <p>{{ section5part1 }}</p>
+                <p>{{ section5part2 }}</p>
+            </div>
         </div>
-
-
     </div>
-    <h2>Photography.</h2>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block img4" src="./images/compressed/alex_toop_brecon_snow.jpg"
-                     alt="Alexander ('Alex') Toop's image of the end of a walk in Brecon.">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Walking.</h5>
-                    <p>Brecon, UK.</p>
+
+    <div id="section6">
+        <h2>{{ section6title }}</h2>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block img4" src="./images/compressed/alex_toop_brecon_snow.jpg"
+                        alt="Alexander ('Alex') Toop's image of the end of a walk in Brecon.">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Walking.</h5>
+                        <p>Brecon, UK.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img4" src="./images/compressed/alex_toop_cardiff.jpg"
+                        alt="Alexander ('Alex') Toop's image in Cardiff.">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Work.</h5>
+                        <p>Cardiff, UK.</p>
+                    </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img class="d-block img4" src="./images/compressed/alex_toop_cardiff.jpg"
-                     alt="Alexander ('Alex') Toop's image in Cardiff.">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Work.</h5>
-                    <p>Cardiff, UK.</p>
-                </div>
-            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
 </div>
 
@@ -162,5 +117,84 @@
     $(document).ready(function () {
         $('#nav-bar-content').load('jquery_includes/navbar.html');
         $('#home-link').addClass('active');
+    });
+
+    const content = {
+        title: "Alex Toop Software Engineering",
+        section1title: "Me",
+        section1part1: "Studied at Aberystwyth University Software Engineering BEng. First Class Honours.",
+        section1part2: "Developed Java server back-ends and Angular front-ends for intelligent pre-sales systems in prior BT employment.",
+        section2title: "GitHub",
+        section3title: "Development",
+        section3part1: "Commercial, Java and JavaScript development and deployment.",
+        section3part2: "Commercial, JUnit, Jasmine and Angular framework use.",
+        section3part3: "Personal, Fitbit JavaScript and node.js development.",
+        section4title: "History",
+        section4part1: "Achieved grades BBBD in Computing, Mathematics, General Studies and Physics at A-Level.",
+        section4part2: "Software Engineering Bachelors Degree, Aberystwyth University.",
+        section4part3: "BT TSO Software Development involving Java and Angular.",
+        section5title: "Hobbies",
+        section5part1: "I enjoy developing in my spare time and currently doing Fitbit JavaScript development alongside node.js projects.",
+        section5part2: "I regularly swim with friends and enjoy long-distance running on occasion. Competitive eSports gaming is one of my passions and I have attended and won events at LANs as a part of a team.",
+        section6title: "Photography"
+    }
+
+    var app = new Vue({
+        el: '#section1',
+        data: {
+            section1title: content.section1title,
+            section1part1: content.section1part1,
+            section1part2: content.section1part2
+        }
+    });
+
+    var app2 = new Vue({
+        el: '#header',
+        data: {
+            title: content.title
+        }
+    });
+
+    var app3 = new Vue({
+        el: '#section2',
+        data: {
+            section2title: content.section2title
+        }
+    });
+
+    var app4 = new Vue({
+        el: '#section3',
+        data: {
+            section3title: content.section3title,
+            section3part1: content.section3part1,
+            section3part2: content.section3part2,
+            section3part3: content.section3part3
+        }
+    });
+
+    var app5 = new Vue({
+        el: '#section4',
+        data: {
+            section4title: content.section4title,
+            section4part1: content.section4part1,
+            section4part2: content.section4part2,
+            section4part3: content.section4part3
+        }
+    });
+
+    var app6 = new Vue({
+        el: '#section5',
+        data: {
+            section5title: content.section5title,
+            section5part1: content.section5part1,
+            section5part2: content.section5part2
+        }
+    });
+
+    var app7 = new Vue({
+        el: '#section6',
+        data: {
+            section6title: content.section6title
+        }
     });
 </script>
